<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f3f3f3"
    >

    <include
        android:id="@+id/include_titlebar_login"
        layout="@layout/include_titlebar"/>
    <!--该textView在复用的时候设置visible的属性-->
    <TextView
        android:id="@+id/tv_register_info_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/include_titlebar_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/register_text"
        android:textSize="16sp"/>


    <!-- 输入手机号-->
    <LinearLayout
        android:id="@+id/ll_telnum_login"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_register_info_login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_register_edit"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_mail_login"
            />

        <EditText
            android:id="@+id/et_register_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/register_phone"
            android:phoneNumber="true"
            android:textSize="15sp"/>

    </LinearLayout>

    <!--验证码-->

        <LinearLayout
            android:id="@+id/ll_identify_login"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_below="@id/ll_telnum_login"
            android:layout_alignLeft="@id/ll_telnum_login"
            android:layout_alignParentEnd="false"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_register_edit"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_mail_login"

                />

            <EditText
                android:id="@+id/et_register_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/register_code"
                android:phoneNumber="true"
                android:textSize="15sp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_register_sendcode"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_register_code"
                android:text="请输入验证码"
                android:textSize="14sp"/>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_newpassword_login"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_register_edit"
        android:layout_below="@id/ll_identify_login"
        android:layout_alignLeft="@id/ll_identify_login"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_password_login"
            />

        <EditText
            android:id="@+id/et_register_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/register_pwd"
            android:textSize="15sp"/>




    </LinearLayout>
    <Button
        android:id="@+id/btn_register_login"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_newpassword_login"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login_select"
        android:layout_centerHorizontal="true"
        android:text="text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/forget_content_size"
        />



    </RelativeLayout>




